Color Schemes: Fix contrast for sidebar site selector when no results are found (#31556)

--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -216,7 +216,11 @@
 		
 		.all-sites {
 			border-color: var( --sidebar-border-color );
-		}				
+		}
+	}
+
+	.site-selector__no-results {
+		color: var( --sidebar-heading-color );
 	}
 	
 	.all-sites .count {
